--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -19,7 +19,9 @@ WORKDIR /glibc
 RUN dpkg -i *.deb
 
 WORKDIR /
-RUN git clone -b v1.6.3 https://github.com/h2o/h2o --depth 1
+## h2o or mruby depends
+RUN apt-get update && apt-get install -y ruby2.1-dev
+RUN git clone -b v1.7.0 https://github.com/h2o/h2o --depth 1
 WORKDIR /h2o
 RUN git submodule update --init --recursive
 RUN echo 'SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")' >> CMakeLists.txt
