--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -18,10 +18,13 @@ RUN dpkg-buildpackage -us -uc -rfakeroot
 WORKDIR /glibc
 RUN dpkg -i *.deb
 
+## Just Rebuild?
+ADD .stamp /.stamp
+
 WORKDIR /
 ## h2o or mruby depends
 RUN apt-get update && apt-get install -y ruby2.1-dev
-RUN git clone -b v1.7.1 https://github.com/h2o/h2o --depth 1
+RUN git clone -b v1.7.3 https://github.com/h2o/h2o --depth 1
 WORKDIR /h2o
 RUN git submodule update --init --recursive
 RUN echo 'SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")' >> CMakeLists.txt
@@ -30,6 +33,11 @@ RUN echo 'SET(CMAKE_EXE_LINKER_FLAGS "-static -static-libstdc++ -static-libgcc")
 
 ## MrubyGems
 RUN git clone https://github.com/kaihar4/mruby-ipaddress_matcher.git --depth 1 deps/mruby-ipaddress_matcher
+RUN rm -rf deps/mruby-onig-regexp
+RUN git clone -b h2o https://github.com/kazuho/mruby-onig-regexp.git --depth 1 deps/mruby-onig-regexp
+
+## Just Rebuild?
+# ADD .stamp /.stamp
 
 ## Build
 RUN cmake -DWITH_BUNDLED_SSL=on -DBUILD_SHARED_LIBS=no -DWITH_MRUBY=ON .\
