--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,4 +1,5 @@
 FROM buildpack-deps
+
 RUN echo "deb-src http://ftp.jp.debian.org/debian/ jessie main" >> /etc/apt/sources.list
 RUN echo "deb-src http://security.debian.org/ jessie/updates main" >> /etc/apt/sources.list
 RUN mkdir -p /glibc
@@ -20,11 +21,12 @@ RUN dpkg -i *.deb
 
 ## Just Rebuild?
 ADD .stamp /.stamp
+ARG H2O_VERSION=v2.2.0
 
 WORKDIR /
 ## h2o or mruby depends
 RUN apt-get update && apt-get install -y ruby2.1-dev
-RUN git clone -b v2.0.6 https://github.com/h2o/h2o --depth 1
+RUN git clone -b $H2O_VERSION https://github.com/h2o/h2o --depth 1
 WORKDIR /h2o
 RUN git submodule update --init --recursive
 RUN echo 'SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")' >> CMakeLists.txt
